added ability to choose names

--- a/challenge_1/styles.css
+++ b/challenge_1/styles.css
@@ -35,3 +35,11 @@ body {
   color: green;
 }
 
+#score, .title {
+  text-decoration: underline;
+}
+
+#btn {
+  font-size: 14px;
+  padding: 10px;
+}
